--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: ProiectPS
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Continuous random variable
 Version: 0.1.0
-Author: Darius, Stefan, Nix, Ana
+Author: Darius Buhai, Stefan Radu, Ciausu Nicoleta, Comorasu Ana-Maria
 Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Description: Working with continuous random variable
+License: Open Source
 Encoding: UTF-8
 LazyData: true
